# python-uv-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
package/core/: example.py
tests/core/: test_example.py
