[project]
name = "example-python-package-template"
dynamic = ["version"]
description = "Add your description here"
authors = [
    {name = "your_name", email = "your_email@example.com"}
]
readme = "README.md"
requires-python = "==3.11.9"
classifiers = [
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "dbt-core==1.10.13",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "ruff",
]

[project.scripts]
example_script = "package.core.example:main"

[tool.uv]
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["package"]

[tool.hatch.build.targets.wheel]
only-include = ["package"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.mypy]
files = ["package/**/*.py", "tests/**/*.py"]
disable_error_code = ["annotation-unchecked"]
ignore_missing_imports = true
non_interactive = true
install_types = true

[tool.pytest.ini_options]
addopts = "--cov package --cov-branch --cov-report term-missing --cov-report html:coverage_reports --cov-report lcov:coverage_reports/coverage.lcov --junit-xml=coverage_reports/pytest-report.xml"

[tool.coverage.run]
source = ["package"]
omit = ["*/__init__.py"]

[tool.ruff]
include = ["package/**/*.py", "tests/**/*.py"]
target-version = "py311"

[tool.ruff.lint]
select = [ "E", "F", "I",]
ignore = [ "E501", "E721", "E722",]
